--- a/_config.yml
+++ b/_config.yml
@@ -19,14 +19,14 @@ avatar: /images/920654.jpg
 footer-links:
   dribbble:
   email:
-  facebook:
+  facebook: profile.php?id=100010781951018&ref=bookmarks
   flickr:
-  github: barryclark/jekyll-now
+  github:
   instagram:
   linkedin:
   pinterest:
   rss: # just type anything here for a working RSS icon
-  twitter: jekyllrb
+  twitter:
   stackoverflow: # your stackoverflow profile, e.g. "users/50476/bart-kiers"
   youtube: # channel/<your_long_string> or user/<user-name>
   googleplus: # anything in your profile username that comes after plus.google.com/
